--- a/order-value-forecast-april2025.ipynb
+++ b/order-value-forecast-april2025.ipynb
@@ -86,13 +86,13 @@
     "df_teste['predito'] = predicoes\n",
     "previsao_abril_agrupada = df_teste.groupby('company_id')['predito'].sum().reset_index()\n",
     "print(\"🔮 Previsão de valor total por empresa - Abril/2025\")\n",
-    "print(previsao_abril_agrupada)"
+    "print(previsao_abril_agrupada"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.3)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
